--- a/cosmo.html
+++ b/cosmo.html
@@ -286,64 +286,75 @@
                     </div>
                     <div class="Slim_content">
                         <p>
-                            A dull uneven patchy skin is another sign of ageing. Healthy, young skin is smooth and radiant because the skin is able to quickly regenerate so that new cells are brought to the surface and older cells are continuously shed. However, as we grow older, the skin's regenerating capability decreases, causing dead skin cells to accumulate on top making the skin look dull. Further, other environmental factors like sun damage and lifestyle can make your skin look dull, lifeless and uneven. These are also the first early signs of ageing and should be tackled so that you continue to look youthful and beautiful. 
+                            We at Cosset World, use new international array of superior CosmeDermat treatments, along with an efficient range of products developed with Swiss expertise.
                         </p>
                         <p>
-                            Dull skin, uneven skin tone can be treated effectively with chemical peels. They improve the appearance of ageing skin by using a chemical solution to remove the outer layer of old skin. The new skin that replaces it is usually smoother and less wrinkled in appearance.
+                            The cutting-edge  <b>Cosmedermat treatments </b>will incorporate the innovative Stem-Cellogist TX, HydroGlacier Therapy and White-Neurogist solutions for radiant and gleaming skin.
+                            The treatments apply the synergies of cosmetology, dermatology, pharmacology and chemical sciences making it an adequate mode of sustainable skin reinvigoration. The treatments regenerate the skin's clarity tone as well as texture, commencing to beautiful skin – both inside and outside.
                         </p> 
+                        <p>
+                            The scientifically refined Cosmedermat treatments have been tested for their consequences with the use of FDA certified equipment and techniques approved by 2500 doctors, dermatologists and cosmetologists. Therefore, based on the customer's problems, Cosset World offers personalised and customised solutions for radiant and healthy skin.
+                        </p>
                     </div>
                 </div>
             </section> 
-            <!-- end---here -->
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp SkinTrt_Wrp
-            Cosmo_Wrp"   data-aos="fade-up"
+            <!-- end---here --> 
+
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2"   data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container"> 
                     <div class="Benefit-content Organic-Cnt Prp_hair">  
                        <div class="key-wrp">
-                            <div class="key01">
-                            <h3>Recommended for:  </h3>
-                            <p>
-                                anti-ageing; fine lines & wrinkles; sun damage; pigmentation; dullness & congestion; dryness & dehydration; loss of firmness; large pores; blemish prone
-                            </p> 
-                         </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2"   data-aos="fade-up"
-            data-aos-easing="linear"
-            data-aos-duration="1300">
-                <div class="container">
-                    <div class="Benefit-heading">
-                        <h2>WHAT ARE THE BENEFITS OF <span>Cosmedermat Treatment ? </span></h2>
-                    </div>
-                    <div class="Benefit-content Organic-Cnt Prp_hair">  
-                       <div class="key-wrp">
-                            <div class="key01">
-                            <h3>Remove Dead Skin: </h3>
-                                  <p>
-                                    Since the presence of dead skin has been warded off through this treatment, your skincare products will be able to work better on your skin. Your products are able to work better because there are no dead skins to obstruct their results. 
-                                </p>
-                            </div>
-                            <div class="key01">
-                                <h3>Customization for Darker Skin:</h3>
-                                <p>
-                                    Chemical peels can be customized. Due to this, these peels can be used on darker skin tones without the risk of discoloration. 
-                                </p>
-                            </div>
-                            <div class="key01">
-                                <h3>Reduce Acne and Scars:  </h3>
-                                <p>
-                                    Chemical peels can heal acne and reduce the scars caused by then. But for this result to take place, you will have to consult the dermatologist to avail the right kind of peel. 
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>Treat Melasma: </h3>
-                                <p>
-                                    Chemical peels offer the best fighting chance against melasma which is caused due to hormones and prolonged exposure to UV rays.
-                                </p>
+                                <div class="key01">
+                                <h3>Stem-Cellogist TX: </h3>
+                                    <p>
+                                        A unique anti-ageing skin solution catering three-fold benefits by smoothening out fine lines and wrinkles while replenishing quantity to provide increased firmness and elasticity, lightens pigmentation, and hydrates and feeds the skin with nutrients and vitamins for optimal endurance and health. The treatment aids in diminishing up to 74% of wrinkles in just an hour and reactivates skin’s 5 anti-ageing functions- regeneration, reconstruction, protection, nourishment and hydration.
+                                    </p>
+                                </div>
+                                <div class="key01">
+                                    <h3>Stem-Cellogist TX:</h3>
+                                    <ul>
+                                        <li>  For Ageing, Fatigued and Mature Skin </li>
+                                        <li> Reduces up to <b style="font-weight: bold;color: #000;">74% Wrinkles </b>in just <b style="font-weight: bold;color: #000;">1 Hour</b> </li>
+                                        <li> Reactivates Skin’s 5 Anti-Ageing functions</li>
+                                        </ul>
+                                </div>
+                                <div class="key01">
+                                    <h3>SHydroGlacier Therapy: </h3>
+                                        <p>
+                                            It revitalizes dry and dehydrated skin, boosts moisture level and also allows the preservation of moisture. It removes dull & keratinised skin for optimal assimilation of nutrients, helps penetrate & saturate skin layers with deep, long-lasting hydration and boosts the skin’s ability to retain maximum hydration levels.
+                                        </p>
+                                </div>
+                                <div class="key01">
+                                    <h3>HydroGlacier Therapy:</h3>
+                                       <ul>
+                                           <li> For Dry & Dehydrated Skin </li>
+                                           <li> Increases<b style="font-weight: bold;color: #000;">2X More Moisture  </b>  in skin.  </li>
+                                           <li> Retains <b style="font-weight: bold;color: #000;">Moisture in Skin</b> </li>
+                                        </ul>
+                                </div>
+                                <div class="key01">
+                                    <h3>White-Neurogist: </h3>
+                                        <p>
+                                            It combats free radicals and helps counter the oxidative pressure on the skin, helps lighten obstinate pigmentation and brown spots and repairs yellowish, dull and uneven skin tones. Moreover, White-NeurogistTM stops future discolouration of the skin and preserves skin fairness for a lengthier period.
+                                        </p>
+                                </div>
+                                <div class="key01">
+                                    <h3>White-Neurologist</h3>
+                                       <ul>
+                                           <li> For Pigmented skin </li>
+                                           <li> Visible skin lightening in <b style="font-weight: bold;color: #000;">10 days  </b>  </li>
+                                           <li> Corrects stubborn pigmentation, dark spots, dull & uneven skin tones</li>
+                                           <li> Prevents future discolouration</li>
+                                        </ul>
+                                </div>
+                                <div class="key01">
+                                    <h3>Cost Of Cosmedermat Treatments? </h3>
+                                        <p>
+                                            The cost of Cosmedermat treatments in India may vary depending on the therapy you opt for. As suggested by dermatologist your referred Cosmedermat treatment will fluctuate. If 
+                                        </p>
+                                </div>
                             </div> 
                          </div>
                     </div>
