--- a/skintreatment.html
+++ b/skintreatment.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper 
+    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper Organic_Wrapper
     SkinTreatment_Wrapper">
         <header>
             <div class="top-social-bar">
@@ -276,20 +276,29 @@
           </div>
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Main-PrpHair-content MainPigment-content" >
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service"   data-aos="fade-up"
+            <section class="Slim_Service Filler-Service Prp-service Org_wrp "   data-aos="fade-up"
     data-aos-easing="linear"
     data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2>Types of<span>  Skin Treatments </span></h2>
+                        <h2>Skin<span> Treatment  </span></h2>
                     </div>
-                    <div class="Slim_content">
+                    <div class="Slim_content Organic-Cnt">
                         <p>
-                            Your skin is constantly protecting you. Your skin keeps infections out of your body and keeps you from getting sick. When you take care of your skin, you’re helping your skin do its job. And taking care of your skin today will help prevent future problems, like wrinkles and even skin cancer. Good skincare also has tremendous social and mental benefits. By looking good it makes a great first impression on others in an interview, a date, or even just making new friends. The mental benefits may even be greater – it keeps you feeling good about yourself. Nothing gives you more self-confidence and an extra bounce in your step more than knowing you look good. The proper skincare, being that skin is the most noticeable part of a person’s body is the #1 way to get that feeling. 
-                        </p>
-                        <p>
-                          There are many different types of skin problems – cosmetic and health and many types of solutions. We will focus on skin problems/treatments for cosmetic purposes. Some of the more common issues are acne scars, age spots, wrinkles, and sagging skin. Some of the more common skin treatments are laser treatments for laser rejuvenation and laser resurfacing, microdermabrasion, botox (botulinum toxins), dermal fillers, chemical peels among others.
+                            Do you desire a healthy glow needless of any makeup? We all do. Isn’t it? A faultless and radiant skin from day to dawn is the fantasy of every lady. Be it your 20’s, 30’s, 40’s or whatever, you constantly want to carry a flawless look, illuminating your beauty inside-out. Some of us are blessed with perfect skin, but many suffer breakouts at some point in life making the skin look old and unclear. Also, ageing can generate creases, wrinkles and age spots reducing the radiance of the skin. But what the heart desires is what Medical science offers, the key to all your problems to keep your skin bright & rejuvenated.
+                            Cosmetic skin treatments have been gaining popularity as it helps in achieving the perfect skin. If your skin is turning dull, dark & old and you are feeling bad about it, cheer up lady. 
+                            <b>Skin Whitening Treatment </b>can restore your youthful radiance and give you the desired skin.
+                            
                         </p> 
+                        <p>Before moving further let's have a look at the reasons that are draining your skin health.</p>
+                       <ul>
+                           <li>Exposure to harmful sun rays</li>
+                           <li>Improper & insufficient sleep</li>
+                           <li> Dehydration</li>
+                           <li> Pollution</li>
+                           <li>Unhealthy diet</li>
+                           <li> Not maintaining a skincare routine</li>
+                       </ul>
                     </div>
                 </div>
             </section> 
@@ -301,39 +310,40 @@
                     <div class="Benefit-content Organic-Cnt Prp_hair">  
                        <div class="key-wrp">
                             <div class="key01">
-                            <h3>Microdermabrasion</h3>
+                            <h3>Skin Brightening, Whitening & Lightening</h3>
                                   <p>
-                                      Microdermabrasion works to remove age spots and light acne scars. The procedure is one of the favorite wrinkle treatments because it is performed quickly in a facial esthetics office. The physician uses a handheld instrument to spray small crystals onto the surface of the skin. The crystals exfoliate the skin layers while using suction simultaneously to remove the crystals and dead skin cells. More than one microdermabrasion treatment may be needed for wrinkle removal and other skin treatments it provides.
+                                    The <b>permanent skin whitening treatment </b>
+                                    . Usually, the brightening commodities consist of vitamin C, retinol and alpha-beta hydroxy acids. Your dermatologist can advise you of the ideal product for your condition. It gradually brightens the skin and restores a vibrant look. 
+                               </p>
+                            </div>
+                            <div class="key01">
+                                <h3>Skin Specialist In Gurgaon</h3>
+                                <p>
+                                    Experts at Cosset World are dedicatedly working hard to ensure the best possible outcomes, they are the 
+                                    <b>best skin specialist in Gurgaon </b>you can search for. There are lots of  <b>skin doctor in Gurgaon</b>but it's hard to find what you get at Coset World. Many 
+                                    <b>skin specialist Gurgaon </b>
+                                    will bluff you lot about useless things but you gotta decide what you want. Consulting the real and authentic doctor will really help you out.
+                                     
                                 </p>
                             </div>
                             <div class="key01">
-                                <h3>Chemical Peels</h3>
+                                <h3>Skin Lightening Treatment Packages Available </h3>
                                 <p>
-                                    Chemical peels also called chemexfoliation or derma-peeling treatments, are cosmetic treatments performed on the face, typically used as an anti-aging solution to rejuvenate the skin. Chemical peels are used to correct skin irregularities in texture, such as fine lines, and color, such as spots caused by sun damage. These peels have varying strengths, characterized by the different kinds of acids used in the applied chemical solution. Chemical-peel solutions use three main acid ingredients to reach varying levels of intensity: alpha hydroxy acid (AHA), trichloroacetic acid (TCA), and phenol.
-                                </p>
-                            </div>
-                            <div class="key01">
-                                <h3>Laser Resurfacing </h3>
-                                <p>
-                                    Laser skin resurfacing removes the outer layers of the skin that are damaged. The laser resurfacing procedure stimulates the production of collagen and new skin cells in the underlying layers of the skin. Laser resurfacing is now used to eliminate or reduce wrinkles and fine lines on the face and neck.
+                                    If you are looking for restoring your even skin tone reliably and effectively, reputed skin clinics offer various packages of <b>full body skin lightening surgery cost, </b>
+                                    customised to match your specific grooming needs. You can select from the below-mentioned options based on the target area:
                                 </p>
                             </div> 
-                            <div class="key01">
-                                <h3>Laser Skin Rejuvenation</h3>
+                            <ul>
+                                <li> Lightening treatment for full body</li>
+                                <li> Brightening procedure for facial skin</li>
+                                <li> Lightening treatment for underarms</li>
+                                <li> Brightening procedure for neck, hands and feet</li>
+                                <li> Lightening treatment for private parts, including inner thighs and bikini area</li>
+                            </ul>
+                            <div class="key01"> 
                                 <p>
-                                    Laser skin treatment is an advanced wrinkle removal treatment that uses infrared light to tighten the skin without surgery. The laser light delivers heat to layers beneath the skin’s surface, stimulating collagen production and making the skin look tighter. Many patients consider the procedure a good alternative to the traditional facelift, as it requires no anesthesia, no scalpel, and no downtime
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>Acne Blue Light Therapy  </h3>
-                                <p>
-                                    Acne blue light therapy works by targeting the bacteria that causes acne. Moderate acne that has not responded to other facial skincare treatments can be treated with this light-based therapy, which is administered over a span of several weeks. Acne blue light therapy rarely causes side effects and does not damage the skin. 
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>Thermage</h3>
-                                <p>
-                                    Thermage is a non-exfoliating facial rejuvenation technique designed to tighten and improve the contours of the face and neck. These aesthetic improvements are achieved with a radiofrequency device that is passed over the face, with the tip in contact with the skin’s surface. Controlled radio waves from the device heat the deeper layers of the skin, stimulating new collagen development. The result is tighter and often smoother skin. Unlike laser treatments, Thermage can treat all skin types and requires no downtime. The benefits of the procedure are often immediately apparent and long-lasting.
+                                  <b>Skin lightening treatment </b>cost may vary depending upon the type of service and package you prefer to choose.
+                                  <b>Skin lightening laser treatment cost </b>is much effective than non-laser ones. Whatever your choice may be, you can always contact us via our website or directly call us and inquire about any treatment you like.
                                 </p>
                             </div> 
                          </div>
